# dual-arm-microfactory

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: app-workbench.md  architecture.md  demo-script.md  hardware-plan.md  index.html  linkedin-recording-guide.md  technical-roadmap.md
docs/demo/: README.md  index.html  linkedin-post.md  manifest.json
docs/demo/belt_slip/: acceptance_report.md  cell_state.json  dashboard.html  events.json  metrics.json
docs/demo/clamp_fail/: acceptance_report.md  cell_state.json  dashboard.html  events.json  metrics.json
docs/demo/low_confidence_vision/: acceptance_report.md  cell_state.json  dashboard.html  events.json  metrics.json
docs/demo/nominal/: acceptance_report.md  cell_state.json  dashboard.html  events.json  metrics.json
docs/demo/wrong_part/: acceptance_report.md  cell_state.json  dashboard.html  events.json  metrics.json
scripts/: capture_readme_media.js  verify_public_demo.py
src/microfactory/: __init__.py  __main__.py  ports.py
src/microfactory/cell/: models.py  scenarios.py
src/microfactory/control/: assembly.py  recovery.py
src/microfactory/dashboard/: static.py
src/microfactory/demo/: __init__.py  package.py
src/microfactory/perception/: vision.py
src/microfactory/planning/: grasp.py  motion.py
src/microfactory/reporting/: events.py  metrics.py  report.py
tests/: browser_smoke.js  test_assembly.py  test_demo_package.py
