[project]
name = "dual-arm-microfactory"
version = "0.1.0"
description = "Simulation-first autonomous dual-arm microfactory demo with vision, motion planning, assembly recovery, and acceptance logging."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Eric Rosenfeld" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
microfactory = "microfactory.__main__:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
